k8-app-deploy/2-python-package-flask-test_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-package-flask-test-service
  labels:
    app: python-package-flask-test
spec:
  selector:
    app: python-package-flask-test
  type: LoadBalancer
  # type: NodePort
  ports:
  - port: 5000
    targetPort: http
    nodePort: 30163 #30000-32767
    protocol: TCP
    name: http
