k8-app-deploy/python-package-flask-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-package-flask-test-ingress
  labels:
    app: python-package-flask-test
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-package-flask-test-service
                port:
                  number: 5000
